# hello-rs-example

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: lib.rs
